<resources>
    <string name="app_name">La carte</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="config_toolbar">Config</string>
    <string name="suppression_toolbar">Suppression</string>

    <string name="menu_carte">Carte</string>
    <string name="menu_listes">Listes</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="tv_distance_default">Distance</string>

    <string name="btn_add_marker">Ajouter</string>
    <string name="btn_cancel_add_marker">Annuler</string>
    <string name="et_message_hint">Votre message...</string>

    <string name="tv_titre_form_modif_utilisateur">Modifier l\'utilisateur</string>
    <string name="btn_modifier_utilisateur">Modifier</string>
    <string name="btn_annuler_form_modif_utilisateur">Annuler</string>
    <string name="et_prenom_form_utilisateur">votre prénom...</string>
    <string name="et_nom_form_utilisateur">votre nom...</string>

    <string name="default_user_firstname">Garneau</string>
    <string name="default_user_lastname">Cégep</string>



</resources>